Make snippets executable